--- a/mendrix-consultancy/parts/header.html
+++ b/mendrix-consultancy/parts/header.html
@@ -1,3 +1,4 @@
+<!-- wp:template-part {"slug":"icons","theme":"mendrix-consultancy"} /-->
 <!-- wp:group {"tagName":"header","layout":{"type":"flex","justifyContent":"space-between","flexWrap":"wrap"},"style":{"spacing":{"padding":{"top":"1.5rem","bottom":"1.5rem","left":"var(--wp--preset--spacing--40)","right":"var(--wp--preset--spacing--40)"}}}} -->
 <header class="wp-block-group" style="padding-top:1.5rem;padding-right:var(--wp--preset--spacing--40);padding-bottom:1.5rem;padding-left:var(--wp--preset--spacing--40)"><!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"left","verticalAlignment":"center"},"style":{"spacing":{"blockGap":"1rem"}}} -->
 <div class="wp-block-group"><!-- wp:site-logo {"width":56,"shouldSyncIcon":false} /-->
